Use standardized accelerator-to-shortcut code for new backspace shortcut UI.

This changes the left and right arrow symbols into text (e.g. "left arrow"),
reducing ambiguity.  It also promotes cmd-[ over cmd-left on Mac.

BUG=637547
TEST=On a new profile, have a page in your "back" session history, then hit backspace twice while outside a textfield to trigger the "Use alt-left to go back" UI.  It should say "Left arrow" instead of "<-".

Review-Url: https://codereview.chromium.org/2540523003
Cr-Commit-Position: refs/heads/master@{#439747}

Former-commit-id: 00d3a368e97975b82f4dc4f483f6e8c6e85331c0